fix footer-right overflow

--- a/ihatemoney/static/css/main.css
+++ b/ihatemoney/static/css/main.css
@@ -231,7 +231,7 @@ footer p.footer-links a {
 footer .footer-right {
   float: right;
   margin-top: 6px;
-  max-width: 180px;
+  max-width: 225px;
 }
 
 footer .footer-right a {
